--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon Says Game</title>
-    <link rel="stylesheet" href="game.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simon Says Game</title>
+  <link rel="stylesheet" href="game.css">
+
+  <!-- Font Awesome (IMPORTANT) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
 </head>
+
 <body>
+    <!-- <div
+      style="
+        text-align: left;
+        margin-left: 50px;
+        margin-top: 20px;
+        font-size: 30px;
+        padding: 5px;
+      "
+    >
+      <a href="../../index.html">
+        <i style="color: black" class="fas fa-home home-icon"></i>
+      </a>
+    </div> -->
     <h1>Simon Game By Amol</h1>
-    <h2>Press any key to start the game</h2>
+    <h2>Tap screen or press any key to start</h2>
     <div class="btn-container">
         <div class="line-one">
             <div class="btn red" type="button" id="red">1</div>
@@ -18,6 +38,7 @@
             <div class="btn green" type="button" id="green">3</div>
         <div class="btn purple" type="button" id="purple">4</div>
         </div>
+        
         
     </div>
    
